k3s/apps/manifests/netbird/publication.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-proxy
  namespace: netbird
spec:
  type: ExternalName
  externalName: traefik.traefik.svc.cluster.local
